--- a/LoCyanFrpDesktop/packages.config
+++ b/LoCyanFrpDesktop/packages.config
@@ -3,4 +3,6 @@
   <package id="HandyControl" version="3.4.0" targetFramework="net48" />
   <package id="Microsoft.Exchange.WebServices" version="2.2" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="7.0.0" targetFramework="net48" />
+  <package id="WPF-UI" version="2.0.3" targetFramework="net48" />
 </packages>
