--- a/LoCyanFrpDesktop/LoCyanFrpDesktop.csproj
+++ b/LoCyanFrpDesktop/LoCyanFrpDesktop.csproj
@@ -60,6 +60,7 @@
     <PackageReference Include="HandyControl" Version="3.4.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Exchange.WebServices" Version="2.2.0" />
+    <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="WPF-UI" Version="2.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
