Ver 2.0.0-Alpha2: Fixed a lot of the bugs.
What's next?

--- a/LoCyanFrpDesktop/Properties/Settings.settings
+++ b/LoCyanFrpDesktop/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="FrpToken" Type="System.String" Scope="User">
       <Value Profile="(Default)">null</Value>
     </Setting>
+    <Setting Name="FrpcPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
