--- a/LoCyanFrpDesktop/App.config
+++ b/LoCyanFrpDesktop/App.config
@@ -19,6 +19,9 @@
             <setting name="FrpToken" serializeAs="String">
                 <value>null</value>
             </setting>
+            <setting name="FrpcPath" serializeAs="String">
+                <value />
+            </setting>
         </LoCyanFrpDesktop.Properties.Settings>
     </userSettings>
 </configuration>
