--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -49,7 +49,7 @@ jobs:
           dotnet clean
           dotnet publish "LoCyanFrpDesktop/LoCyanFrpDesktop.csproj" -f net6.0-windows --no-self-contained -p:PublishSingleFile=true -p:RuntimeIdentifier=win-x64 -p:IncludeContentInSingleFile=true
 
-      - name: Upload Serein(Publish)
+      - name: Upload LocyanFrp(Publish)
         uses: actions/upload-artifact@v4
         with:
           name: LoCyanFrpDesktop_dotnet6_publish
