Ver 2.0.0-Beta? : nice question, man

--- a/LoCyanFrpDesktop/App.config
+++ b/LoCyanFrpDesktop/App.config
@@ -22,6 +22,12 @@
             <setting name="FrpcPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="password" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DebugMode" serializeAs="String">
+                <value>False</value>
+            </setting>
         </LoCyanFrpDesktop.Properties.Settings>
     </userSettings>
 </configuration>
