--- a/LoCyanFrpDesktop/Properties/Settings.settings
+++ b/LoCyanFrpDesktop/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="FrpcPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="password" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DebugMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
