--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -55,5 +55,17 @@ jobs:
           name: LoCyanFrpDesktop_dotnet6_publish
           path: ${{ github.workspace }}\LoCyanFrpDesktop\bin\Debug\net6.0-windows\win-x64\publish
           if-no-files-found: ignore
+          
+      - name: Build the project(Publish,Single File)
+        run: |
+          dotnet clean
+          dotnet publish "LoCyanFrpDesktop/LoCyanFrpDesktop.csproj" -f net6.0-windows -r win-x64 -p:PublishSingleFile=true -p:RuntimeIdentifier=win-x64 -p:IncludeContentInSingleFile=true -p:Configuration=Release --sc -p:IncludeAllContentForSelfExtract=true -p:EnableCompressionInSingleFile=true
+
+      - name: Upload LocyanFrp(Publish,Single File)
+        uses: actions/upload-artifact@v4
+        with:
+          name: LoCyanFrpDesktop_dotnet6_publish_SingleFile
+          path: ${{ github.workspace }}\LoCyanFrpDesktop\bin\Debug\net6.0-windows\win-x64\publish
+          if-no-files-found: ignore
 
   
