Ver 2.2.0-Alpha.5: Add EasterEgg
 and Optimized Setting Page.

--- a/LoCyanFrpDesktop/LoCyanFrpDesktop.csproj
+++ b/LoCyanFrpDesktop/LoCyanFrpDesktop.csproj
@@ -59,6 +59,11 @@
     <Compile Remove="UserCenter.xaml.cs" />
     <Page Remove="UserCenter.xaml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="resource\BSODTrigger.sys">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="cmd /k $(SolutionDir)\LoCyanFrpDesktop\Utils\Init.bat" />
   </Target>
