Ver 2.2.0-Alpha.7: Finished URL Protocol Handler.

--- a/LoCyanFrpDesktop/Properties/launchSettings.json
+++ b/LoCyanFrpDesktop/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "LoCyanFrpDesktop": {
       "commandName": "Project",
-      "commandLineArgs": "--debug"
+      "commandLineArgs": "--debug locyanfrp://7296178fe9bb7cb3b88d27bb700a81a6/55158"
     }
   }
 }
